chore: use gh:miurahr/languagetool:6.5
Signed-off-by: Hiroshi Miura <miurahr@linux.com>